# Autonomous_research_agent

./: .gitignore  README.md  docker-compose.yml  start.bat  start.sh
backend/: agent.py  autonomous_agent.db  database.py  main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json  vite.config.js
frontend/searxng_confiq/: settings.yml
frontend/src/: App.jsx  index.css
