[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.139.0",
    "fpdf2>=2.8.7",
    "markdown>=3.10.2",
    "openai>=2.44.0",
    "pdfkit>=1.0.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "tavily-python>=0.7.26",
    "tenacity>=9.1.4",
    "uvicorn>=0.49.0",
]
